實現進房、離房邏輯

--- a/webClient/src/app/room/room.component.html
+++ b/webClient/src/app/room/room.component.html
@@ -11,6 +11,7 @@
         <option value="*">
           all
         </option>
+        <option *ngFor="let name of players" value="{{name}}">{{name}}</option>
       </select>
     </li>
     <li>
