完成chat 1對1 傳送訊息

--- a/webClient/src/app/room/room.component.html
+++ b/webClient/src/app/room/room.component.html
@@ -7,7 +7,7 @@
   <ul id="status">
     <li>
       users:
-      <select name="users" id="usersList">
+      <select [(ngModel)]="sendTarget">
         <option value="*">
           all
         </option>
