--- a/webClient/src/app/room/room.component.scss
+++ b/webClient/src/app/room/room.component.scss
@@ -5,6 +5,22 @@
 
   ul {
     list-style: none;
+
+    .msg-room {
+      color: darkblue;
+    }
+
+    .msg-person {
+      color: black;
+    }
+
+    .msg-system {
+      color: goldenrod;
+    }
+
+    .msg-error {
+      color: red;
+    }
   }
 }
 
